# cubic_data_engineer_pyspark

./: pyproject.toml
src/: pyspark_tutorial.ipynb  week_2_pyspark_homework.ipynb
src/data/yellow_tripdata_2024-09_copy.parquet/: .part-00000-1e8ab54b-f3f5-43f1-8fde-b9b97559f1e3-c000.snappy.parquet.crc  .part-00002-1e8ab54b-f3f5-43f1-8fde-b9b97559f1e3-c000.snappy.parquet.crc  .part-00006-1e8ab54b-f3f5-43f1-8fde-b9b97559f1e3-c000.snappy.parquet.crc  .part-00010-1e8ab54b-f3f5-43f1-8fde-b9b97559f1e3-c000.snappy.parquet.crc  .part-00013-1e8ab54b-f3f5-43f1-8fde-b9b97559f1e3-c000.snappy.parquet.crc
